Bug 586279 - Broken DeviceManagerD3D9.h compilation on mingw r=bas.schouten a=joe

--HG--
extra : rebase_source : c3c6d40e0adbfa705759cb238ea10fc0e12e0d4a